--- a/src/GUI/drone_app.ui
+++ b/src/GUI/drone_app.ui
@@ -909,7 +909,7 @@
       <enum>QLayout::SetMinimumSize</enum>
      </property>
      <item row="4" column="3">
-      <widget class="QLineEdit" name="TakeoffHeight">
+      <widget class="QLineEdit" name="tbDropHeight">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -925,7 +925,7 @@
       </widget>
      </item>
      <item row="0" column="1" colspan="3">
-      <widget class="QPushButton" name="POSCTL_2">
+      <widget class="QPushButton" name="btnFreefall">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -941,7 +941,7 @@
       </widget>
      </item>
      <item row="4" column="1" colspan="2">
-      <widget class="QPushButton" name="Takeoff">
+      <widget class="QPushButton" name="btnSetHeight">
        <property name="enabled">
         <bool>true</bool>
        </property>
