feat: Add drop velocity control to failsafe state machine

--- a/src/GUI/drone_app.ui
+++ b/src/GUI/drone_app.ui
@@ -885,7 +885,7 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>580</x>
       <y>540</y>
       <width>20</width>
       <height>251</height>
@@ -899,17 +899,17 @@
     <property name="geometry">
      <rect>
       <x>630</x>
-      <y>630</y>
+      <y>550</y>
       <width>261</width>
-      <height>161</height>
+      <height>241</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_4">
      <property name="sizeConstraint">
       <enum>QLayout::SetMinimumSize</enum>
      </property>
-     <item row="4" column="3">
-      <widget class="QLineEdit" name="tbDropHeight">
+     <item row="7" column="1" colspan="2">
+      <widget class="QPushButton" name="btnDropVelocity">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -920,11 +920,11 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>50</string>
+        <string>Drop at Speed:</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="3">
+     <item row="2" column="1" colspan="3">
       <widget class="QPushButton" name="btnFreefall">
        <property name="enabled">
         <bool>true</bool>
@@ -940,7 +940,23 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1" colspan="2">
+     <item row="7" column="3">
+      <widget class="QLineEdit" name="tbDropVelocity">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>1</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1" colspan="2">
       <widget class="QPushButton" name="btnSetHeight">
        <property name="enabled">
         <bool>true</bool>
@@ -956,30 +972,40 @@
        </property>
       </widget>
      </item>
+     <item row="6" column="3">
+      <widget class="QLineEdit" name="tbDropHeight">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>50</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" colspan="3">
+      <widget class="QLabel" name="AutonomousTitle_4">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Failsafe Testing State Machine</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </widget>
-   <widget class="QLabel" name="AutonomousTitle_4">
-    <property name="geometry">
-     <rect>
-      <x>650</x>
-      <y>570</y>
-      <width>221</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Failsafe State Machine</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
    </widget>
   </widget>
   <widget class="QWidget" name="References_Tab">
