add velocity control and recovery buttons

--- a/src/GUI/drone_app.ui
+++ b/src/GUI/drone_app.ui
@@ -919,7 +919,7 @@
      <rect>
       <x>630</x>
       <y>550</y>
-      <width>261</width>
+      <width>280</width>
       <height>241</height>
      </rect>
     </property>
@@ -957,22 +957,6 @@
        </property>
        <property name="text">
         <string>50</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" colspan="3">
-      <widget class="QPushButton" name="btnFreefall">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>Freefall</string>
        </property>
       </widget>
      </item>
@@ -1053,6 +1037,38 @@
        </property>
        <property name="text">
         <string>Tilt Angle</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" colspan="2">
+      <widget class="QPushButton" name="btnFreefall">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Freefall</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="3">
+      <widget class="QPushButton" name="btnRecovery">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>RECOVERY</string>
        </property>
       </widget>
      </item>
